# pyjamaz

./: .gitignore  CHANGELOG.md  CLAUDE.md  FIXES-APPLIED.md  LICENSE.md  README.md  TO-FIX.md  build.zig
.claude/: settings.local.json
.github/workflows/: build-nodejs.yml
bindings/nodejs/: README.md  jest.config.js  package.json  tsconfig.json
bindings/nodejs/examples/: basic.js  basic.ts  batch.ts  test-bundled-package.ts
bindings/nodejs/src/: bindings.ts  index.ts  types.ts
bindings/nodejs/tests/: index.test.js  (+1 more)
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/examples/: basic.py  batch.py  test_bundled_package.py
bindings/python/pyjamaz/: __init__.py
bindings/python/tests/: test_pyjamaz.py
bindings/python/tests/memory/: buffer_memory_test.py  ctypes_memory_test.py  error_recovery_test.py  gc_verification_test.py
docs/: BENCHMARK_RESULTS.md  CHANGELOG.md  CONFORMANCE_TODO.md  CONTRIBUTING.md  MEMORY_TESTS.md  NODEJS_API.md  OPTIMIZATIONS.md  PARALLEL_OPTIMIZATION.md  PERCEPTUAL_METRICS_DESIGN.md  PYTHON_API.md  QUICKSTART.md  README.md  RELEASE.md  STATIC_LINKING.md  TODO.md
scripts/: download_testdata.sh
src/: CLAUDE.md  api.zig  benchmark_root.zig  cache.zig  cli.zig  codec_baseline_root.zig  codecs.zig  conformance_root.zig  image_ops.zig  main.zig  manifest.zig  memory_test_root.zig  metrics.zig  optimizer.zig  optimizer_parallel.zig  search.zig  test_root.zig  types.zig  vips.zig
src/codecs/: api.zig  avif.zig  jpeg.zig  png.zig  webp.zig
src/metrics/: dssim.zig  ssimulacra2.zig
src/test/: conformance_runner.zig
(+16 files in other folders)
